[tool.poetry]
name = "countdown-sleep"
version = "0.1.0"
description = ""
authors = ["chanyou0311 <chanyou0311@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.9b0"

[tool.poetry.scripts]
countdown_sleep = "countdown_sleep.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
